# PathTracer

./: .gitignore  .gitmodules  .plan  CMakeLists.txt  PathTracer.sln  PathTracer.vcxproj  PathTracer.vcxproj.filters  imgui.ini  main.cpp  readme.md
Sources/: AABB.h  Application.cpp  Application.h  Camera.h  DiffuseLight.h  FlipFace.h  Hittable.h  HittableList.cpp  HittableList.h  Lambertian.h  Main.cpp  Material.h  ModelController.cpp  ModelController.h  OrthonomalBasis.h  PathTracer.cpp  PathTracer.h  Pdf.h  Ray.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Vec3.h
Sources/Materials/: DiffuseLight.h  Glass.h  Lambertian.h  Material.h  Metal.h  Pdf.h  Pdfs.h
Sources/Primitives/: FlipFace.h  Hittable.h  HittableList.cpp  HittableList.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h
Sources/Utility/: AABB.h  Camera.h  Common.h  OrthonomalBasis.h  Ray.h  Vec3.h
Sources/models/: readme.md
